--- a/data/cards/01948619.yaml
+++ b/data/cards/01948619.yaml
@@ -64,9 +64,17 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN031
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LEHD-DEA37
     set_name: Legendary Hero Decks
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-DE031
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   fr:
@@ -74,14 +82,26 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR031
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LEHD-ITA37
     set_name: Legendary Hero Decks
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT031
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LEHD-PTA37
     set_name: Legendary Hero Decks
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT031
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   ja:
