--- a/data/cards/02572890.yaml
+++ b/data/cards/02572890.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     When a monster(s) would be Special Summoned, or a monster effect is activated: Tribute 1 WIND Spellcaster monster; negate the Summon or activation, and if you do, destroy that card.
   de: |-
-    Wenn ein oder mehr Monster als Spezialbeschwörung beschworen würden oder ein Monstereffekt aktiviert wird: Biete 1 WIND Monster vom Typ Hexer als Tribut an; annulliere die Beschwörung oder Aktivierung und falls du dies tust, zerstöre die Karte.
+    Wenn ein oder mehr Monster als Spezialbeschwörung beschworen würden oder ein Monstereffekt aktiviert wird: Biete 1 WIND Hexer-Monster als Tribut an; annulliere die Beschwörung oder Aktivierung und falls du dies tust, zerstöre jene Karte.
   es: |-
-    Cuando uno o más monstruos fueran a ser Invocados de Modo Especial, o es activado un efecto de monstruo: Sacrifica 1 monstruo de VIENTO de Tipo Lanzador de Conjuros; niega la Invocación o activación y, si lo haces, destruye esa carta.
+    Cuando uno o más monstruos fueran a ser Invocados de Modo Especial, o un efecto de monstruo es activado: Sacrifica 1 monstruo Lanzador de Conjuros de VIENTO; niega la Invocación o activación y, si lo haces, destruye esa carta.
   fr: |-
-    Lorsqu'un ou plusieurs monstres vont être Invoqués Spécialement, ou qu'un effet de monstre est activé : Sacrifiez 1 monstre VENT de Type Magicien ; annulez l'Invocation ou l'activation, et si vous le faites, détruisez la carte.
+    Lorsqu'un ou plusieurs monstres vont être Invoqués Spécialement, ou qu'un effet de monstre est activé : Sacrifiez 1 monstre VENT Magicien ; annulez l'Invocation ou l'activation, et si vous le faites, détruisez la carte.
   it: |-
-    Quando uno o più mostri stanno per essere Evocati Specialmente, o viene attivato l'effetto di un mostro: offri come Tributo 1 mostro VENTO di Tipo Incantatore; annulla l'Evocazione o l'attivazione e, se lo fai, distruggi quella carta.
+    Quando uno o più mostri stanno per essere Evocati Specialmente, o viene attivato l'effetto di un mostro: offri come Tributo 1 mostro VENTO Incantatore; annulla l'Evocazione o l'attivazione e, se lo fai, distruggi quella carta.
   pt: |-
-    Quando um ou mais monstros seriam Invocados por Invocação-Especial ou um efeito de monstro for ativado: ofereça como Tributo 1 monstro de VENTO do Tipo Mago; negue a Invocação ou ativação e, se isso acontecer, destrua esse card.
+    Quando um ou mais monstros seriam Invocados por Invocação-Especial ou um efeito de monstro for ativado: ofereça como Tributo 1 monstro Mago de VENTO; negue a Invocação ou ativação e, se isso acontecer, destrua esse card.
   ja: |-
     ①：自分フィールドの魔法使い族・風属性モンスター１体をリリースして以下の効果を発動できる。
     ●モンスターの効果が発動した時に発動できる。その発動を無効にし破壊する。
