--- a/data/cards/50692511.yaml
+++ b/data/cards/50692511.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Target 1 "Raidraptor" monster you control; Special Summon 1 monster with the same name as that monster on the field from your hand or Deck in Defense Position. You can only activate 1 "Raidraptor - Call" per turn. You cannot Special Summon monsters during the turn you activate this card, except "Raidraptor" monsters.
   de: |-
-    Wähle 1 „Überfallraptor“-Monster, das du kontrollierst; beschwöre 1 Monster mit demselben Namen wie das Monster auf dem Spielfeld als Spezialbeschwörung von deiner Hand oder deinem Deck in die Verteidigungsposition. Du kannst nur 1 „Überfallraptor - Ruf“ pro Spielzug aktivieren. Du kannst während des Spielzugs, in dem du diese Karte aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Überfallraptor“-Monstern.
+    Wähle 1 „Überfallraptor“-Monster, das du kontrollierst; beschwöre 1 Monster mit demselben Namen wie jenes Monster auf dem Spielfeld als Spezialbeschwörung von deiner Hand oder deinem Deck in die Verteidigungsposition. Du kannst nur 1 „Überfallraptor - Ruf“ pro Spielzug aktivieren. Du kannst während des Spielzugs, in dem du diese Karte aktivierst, keine Monster als Spezialbeschwörung beschwören, außer „Überfallraptor“-Monstern.
   es: |-
-    Selecciona 1 monstruo "Asaltorrapaz" que controles; Invoca de Modo Especial, desde tu mano o Deck, 1 monstruo con el mismo nombre que ese monstruo en el Campo en Posición de Defensa. Sólo puedes activar 1 "Asaltorrapaz - Llamado" por turno. No puedes Invocar monstruos de Modo Especial durante el turno que activas esta carta, excepto monstruos "Asaltorrapaz".
+    Selecciona 1 monstruo "Asaltorrapaz" que controles; Invoca de Modo Especial, desde tu mano o Deck, 1 monstruo con el mismo nombre que ese monstruo en el Campo en Posición de Defensa. Sólo puedes activar 1 "Asaltorrapaz - Llamado" por turno. No puedes Invocar monstruos de Modo Especial durante el turno que actives esta carta, excepto monstruos "Asaltorrapaz".
   fr: |-
     Ciblez 1 monstre "Raidraptor" que vous contrôlez ; Invoquez Spécialement 1 monstre du même nom que le monstre sur le Terrain depuis votre main ou Deck en Position de Défense. Vous ne pouvez activer qu'1 "Raidraptor - Appel" par tour. Vous ne pouvez pas Invoquer Spécialement de monstres (monstres "Raidraptor" exclus) durant le tour où vous activez cette carte.
   it: |-
     Scegli come bersaglio 1 mostro "Raidraptor" che controlli; Evoca Specialmente 1 mostro con lo stesso nome di quel mostro sul Terreno dalla tua mano o Deck in Posizione di Difesa. Puoi attivare solo 1 "Raidraptor - Richiamo" per turno. Non puoi Evocare Specialmente mostri durante il turno in cui attivi questa carta, eccetto mostri "Raidraptor".
   pt: |-
-    Escolha 1 monstro "Ataqueraptor" que você controla; Invoque por Invocação-Especial, da sua mão ou Deck, em Posição de Defesa, 1 monstro com o mesmo nome que esse monstro no campo. Você só pode ativar 1 "Ataqueraptor - Chamado" por turno. Você não pode Invocar monstros por Invocação-Especial durante o turno em que ativar este card, exceto monstros "Ataqueraptor".
+    Escolha 1 monstro "Ataqueraptor" que você controla; Invoque por Invocação-Especial, da sua mão ou do Deck, em Posição de Defesa, 1 monstro com o mesmo nome que o desse monstro no campo. Você só pode ativar 1 "Ataqueraptor - Chamado" por turno. Você não pode Invocar monstros por Invocação-Especial durante o turno em que ativar este card, exceto monstros "Ataqueraptor".
   ja: |-
     「ＲＲ－コール」は１ターンに１枚しか発動できず、このカードを発動するターン、自分は「ＲＲ」モンスターしか特殊召喚できない。①：自分フィールドの「ＲＲ」モンスター１体を対象として発動できる。その同名モンスター１体を手札・デッキから守備表示で特殊召喚する。
   ko: |-
@@ -33,8 +33,7 @@ text:
   zh-TW: |-
     「急襲猛禽－呼喚」１回合僅限發動１張，發動此卡的回合，我方可特殊召喚的怪獸僅限「急襲猛禽」怪獸。①：可將我方場上的１隻「急襲猛禽」怪獸做為對象發動。從手牌・牌組以守備表示特殊召喚１隻該同名怪獸。
   zh-CN: |-
-    此卡名的卡１回合仅可发动１张，发动此卡的回合中，自己仅可特殊召唤“急袭猛禽”怪兽。
-    ①：以自己场上的１只“急袭猛禽”怪兽为对象可以发动。从手牌・牌组将１只其同名怪兽以守备表示特殊召唤。
+    此卡名的卡１回合仅可发动１张，发动此卡的回合中，自己仅可特殊召唤“急袭猛禽”怪兽。①：以自己场上的１只“急袭猛禽”怪兽为对象可以发动。从手牌・牌组将１只其同名怪兽以守备表示特殊召唤。
 card_type: Spell
 property: Normal
 series:
