--- a/data/cards/52159691.yaml
+++ b/data/cards/52159691.yaml
@@ -24,7 +24,7 @@ text:
     ● Dein Gegner kann diese Karte nicht als Ziel für Karteneffekte wählen.
   es: |-
     (Esta carta se trata siempre como una carta "Los Caballeros Fantasma" y "Asaltorrapaz").
-    Si esta carta está en tu mano o Cementerio: puedes desacoplar 1 material de tu Monstruo Xyz de OSCURIDAD; Invoca esta carta de Modo Especial, pero destiérrala cuando deje el Campo. Sólo puedes usar este efecto de "Ala de Asalto" una vez por turno. Un Monstruo Xyz cuyo Atributo original sea de OSCURIDAD y tenga esta carta como material gana este efecto.
+    Si esta carta está en tu mano o Cementerio: puedes desacoplar 1 material de tu Monstruo Xyz de OSCURIDAD; Invoca esta carta de Modo Especial, pero destiérrala cuando deje el Campo. Sólo puedes usar este efecto de "Ala de Asalto" una vez por turno. Un Monstruo Xyz cuyo Atributo original sea OSCURIDAD y tenga esta carta como material gana este efecto.
     ● Tu adversario no puede seleccionar esta carta con efectos de cartas.
   fr: |-
     (Cette carte est toujours traitée comme une carte "Les Chevaliers Fantômes" et "Raidraptor".)
@@ -36,7 +36,7 @@ text:
     ● Il tuo avversario non può scegliere questa carta come bersaglio con gli effetti delle carte.
   pt: |-
     (Este card deve ser sempre considerado como um card "Os Cavaleiros Fantasmas" e "Ataqueraptor".)
-    Se este card estiver na sua mão ou no Cemitério: você pode desassociar 1 matéria de um Monstro Xyz de TREVAS seu; Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar este efeito de "Asa do Raptor" uma vez por turno. Um Monstro Xyz cujo Atributo original seja de TREVAS e que tenha este card como matéria ganha este efeito.
+    Se este card estiver na sua mão ou no Cemitério: você pode desassociar 1 matéria de um Monstro Xyz de TREVAS seu; Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar este efeito de "Asa do Raptor" uma vez por turno. Um Monstro Xyz cujo Atributo original seja TREVAS e que tenha este card como matéria ganha este efeito.
     ● Seu oponente não pode escolher este card como alvo de efeitos de card.
   ja: |-
     このカード名はルール上「幻影騎士団」カード、「ＲＲ」カードとしても扱う。このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、自分フィールドの闇属性ＸモンスターのＸ素材を１つ取り除いて発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。②：このカードを素材として持っている、元々の属性が闇属性のＸモンスターは以下の効果を得る。●このカードは相手の効果の対象にならない。
