--- a/data/cards/80566312.yaml
+++ b/data/cards/80566312.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     This card is used to Ritual Summon "Saffira, Queen of Dragons". You must also Tribute monsters from your hand or field whose total Levels equal 6 or more. If a Ritual Monster(s) you control would be destroyed by battle or card effect, you can banish this card from your GY instead.
   de: |-
-    Diese Karte wird verwendet, um „Saffira, Königin der Drachen“ als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder deiner Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe 6 oder mehr entspricht. Falls ein oder mehr Ritualmonster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, solange sich diese Karte in deinem Friedhof befindet, kannst du stattdessen diese Karte verbannen.
+    Diese Karte wird verwendet, um „Saffira, Königin der Drachen“ als Ritualbeschwörung zu beschwören. Du musst zusätzlich Monster von deiner Hand oder Spielfeldseite als Tribut anbieten, deren gemeinsame Stufe 6 oder mehr entspricht. Falls ein oder mehr Ritualmonster, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du stattdessen diese Karte von deinem Friedhof verbannen.
   es: |-
-    Esta carta es usada para Invocar por Ritual a "Saffira, Reina de Dragones". También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean 6 o más. Si uno o más Monstruos de Ritual que controlas fuera a ser destruido en batalla o por efecto de una carta mientras esta carta está en tu Cementerio, puedes desterrar esta carta en su lugar.
+    Esta carta es usada para Invocar por Ritual a "Saffira, Reina de Dragones". También debes Sacrificar monstruos en tu mano o Campo cuyos Niveles totales sean iguales a 6 o más. Si uno o más Monstruos de Ritual que controlas fueran a ser destruidos en batalla o por el efecto de una carta, puedes desterrar esta carta en tu Cementerio en su lugar.
   fr: |-
-    Cette carte est utilisée pour Invoquer Rituellement "Saffira, Reine des Dragons". Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est égal à min. 6. Si un ou plusieurs Monstres Rituels que vous contrôlez vont être détruits au combat ou par un effet de carte tant que cette carte est dans votre Cimetière, vous pouvez bannir cette carte à la place.
+    Cette carte est utilisée pour Invoquer Rituellement "Saffira, Reine des Dragons". Vous devez aussi Sacrifier des monstres depuis votre main ou Terrain dont le Niveau total est égal à min. 6. Si un ou plusieurs Monstres Rituels que vous contrôlez vont être détruits au combat ou par un effet de carte, vous pouvez bannir cette carte depuis votre Cimetière à la place.
   it: |-
-    Questa carta è utilizzata per Evocare tramite Rituale "Saffira, Regina dei Draghi". Devi anche offrire come Tributo dalla tua mano o Terreno mostri il cui Livello totale sia pari a 6 o superiore. Se uno o più Mostri Rituale stanno per essere distrutti in battaglia o dall'effetto di una carta mentre questa carta è nel tuo Cimitero, puoi invece bandire questa carta.
+    Questa carta è utilizzata per Evocare tramite Rituale "Saffira, Regina dei Draghi". Devi anche offrire come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore a 6. Se uno o più Mostri Rituale che controlli stanno per essere distrutti in battaglia o dall'effetto di una carta, puoi invece bandire questa carta dal tuo Cimitero.
   pt: |-
-    Este card é usado para a Invocação-Ritual de "Saffira, a Rainha dos Dragões". Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual a 6 ou mais. Se um ou mais Monstros de Ritual que você controla seriam destruídos em batalha ou por um efeito de card enquanto este card estiver no seu Cemitério, em vez disso, você pode banir este card.
+    Este card é usado para a Invocação-Ritual de "Saffira, a Rainha dos Dragões". Você também deve oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual a 6 ou mais. Se um ou mais Monstros de Ritual que você controla seriam destruídos em batalha ou por um efeito de card, em vez disso, você pode banir este card do seu Cemitério.
   ja: |-
     「竜姫神サフィラ」の降臨に必要。①：自分の手札・フィールドから、レベルの合計が６以上になるようにモンスターをリリースし、手札から「竜姫神サフィラ」を儀式召喚する。②：自分フィールドの儀式モンスターが戦闘・効果で破壊される場合、代わりに墓地のこのカードを除外できる。
   ko: |-
@@ -33,8 +33,7 @@ text:
   zh-TW: |-
     「龍姬神 薩菲拉」降臨所需。①：為使等級合計超過６以上，解放我方手牌・場上的怪獸，從手牌儀式召喚「龍姬神 薩菲拉」。②：在我方場上的儀式怪獸因戰鬥・效果被破壞的狀況下，可將墓地的此卡除外作為替代。
   zh-CN: |-
-    ①：为使合计等级为６以上，解放自己手牌・场上的怪兽，从手牌将“龙姬神 萨菲拉”仪式召唤。
-    ②：自己场上的仪式怪兽将被战斗・效果破坏的情况下，作为代替可将墓地的此卡除外。
+    ①：为使合计等级为６以上，解放自己手牌・场上的怪兽，从手牌将“龙姬神 萨菲拉”仪式召唤。②：自己场上的仪式怪兽将被战斗・效果破坏的情况下，作为代替可将墓地的此卡除外。
 card_type: Spell
 property: Ritual
 images:
