--- a/data/cards/87514539.yaml
+++ b/data/cards/87514539.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     You can discard this card to the GY, then target 1 Fiend or Zombie monster your opponent controls; take control of that target until the End Phase.
   de: |-
-    Du kannst diese Karte auf den Friedhof abwerfen und dann 1 Unterweltler- oder Zombie-Monster wählen, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über das gewählte Ziel.
+    Du kannst diese Karte auf den Friedhof abwerfen und dann 1 Unterweltler- oder Zombie-Monster wählen, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über jenes gewählte Ziel.
   es: |-
-    Puedes descartar esta carta al Cementerio, y después selecciona 1 monstruo Demonio o Zombi que controle tu adversario; toma el control de ese objetivo hasta la End Phase.
+    Puedes descartar esta carta al Cementerio, y después seleccionar 1 monstruo Demonio o Zombi que controle tu adversario; toma el control de ese objetivo hasta la End Phase.
   fr: |-
-    Vous pouvez défausser cette carte au Cimetière, puis ciblez 1 monstre Zombie ou Démon contrôlé par votre adversaire ; jusqu'à la End Phase, prenez le contrôle de la cible.
+    Vous pouvez défausser cette carte au Cimetière, puis ciblez 1 monstre Démon ou Zombie contrôlé par votre adversaire ; jusqu'à la End Phase, prenez le contrôle de la cible.
   it: |-
     Puoi scartare questa carta al Cimitero, poi scegliere come bersaglio 1 mostro Demone o Zombie controllato dal tuo avversario; prendi il controllo di quel bersaglio fino alla End Phase.
   pt: |-
-    Você pode descartar este card para o Cemitério e, depois, escolher 1 monstro Zumbi ou Demônio que seu oponente controla; tome o controle do alvo até a Fase Final.
+    Você pode descartar este card para o Cemitério e, depois, escolha 1 monstro Zumbi ou Demônio que seu oponente controla; tome o controle do alvo até a Fase Final.
   ja: |-
     ①：このカードを手札から墓地へ捨て、相手フィールドの悪魔族・アンデット族モンスター１体を対象として発動できる。その悪魔族・アンデット族モンスターのコントロールをエンドフェイズまで得る。
   ko: |-
