--- a/data/cards/99550630.yaml
+++ b/data/cards/99550630.yaml
@@ -55,6 +55,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLC1-EN024
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DASA-DE031
     set_name: Dark Saviors
@@ -68,6 +72,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLC1-DE024
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DASA-FR031
     set_name: Dark Saviors
@@ -81,6 +89,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLC1-FR024
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DASA-IT031
     set_name: Dark Saviors
@@ -94,6 +106,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLC1-IT024
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DASA-PT031
     set_name: Dark Saviors
@@ -107,6 +123,10 @@ sets:
     set_name: 2019 Gold Sarcophagus Tin Mega Pack
     rarities:
     - Super Rare
+  - set_number: BLC1-PT024
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DBDS-JP031
     set_name: 'Deck Build Pack: Dark Savers'
