--- a/data/cards/04538826.yaml
+++ b/data/cards/04538826.yaml
@@ -82,41 +82,46 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
-  - set_number: ????-EN???
+  - set_number: BLC1-EN026
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   de:
   - set_number: BLAR-DE051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
-  - set_number: ????-DE???
+  - set_number: BLC1-DE026
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: BLAR-FR051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
-  - set_number: ????-FR???
+  - set_number: BLC1-FR026
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   it:
   - set_number: BLAR-IT051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
-  - set_number: ????-IT???
+  - set_number: BLC1-IT026
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: BLAR-PT051
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
-  - set_number: ????-PT???
+  - set_number: BLC1-PT026
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: VP18-JP004
     set_name: 20th Anniversary Legendary Dragons
