--- a/data/cards/09411399.yaml
+++ b/data/cards/09411399.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: BLC1-EN030
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: DLG1-EN108
     set_name: Dark Legends
     rarities:
@@ -115,6 +119,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: BLC1-DE030
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DP05-FR011
     set_name: 'Duelist Pack: Aster Phoenix'
@@ -141,6 +149,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: BLC1-FR030
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DP05-IT011
     set_name: 'Duelist Pack: Aster Phoenix'
@@ -171,6 +183,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: BLC1-IT030
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DESO-PT010
     set_name: Destiny Soldiers
@@ -185,6 +201,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: BLC1-PT030
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP05-JP011
     set_name: 'Duelist Pack: Aster Phoenix'
