--- a/data/cards/36183881.yaml
+++ b/data/cards/36183881.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Tribute 1 WIND Spellcaster monster, then target 1 monster your opponent controls; banish it.
   de: |-
-    Biete 1 WIND Monster vom Typ Hexer als Tribut an und wähle dann 1 Monster, das dein Gegner kontrolliert; verbanne es.
+    Biete 1 WIND Hexer-Monster als Tribut an und wähle dann 1 Monster, das dein Gegner kontrolliert; verbanne es.
   es: |-
-    Sacrifica 1 monstruo de VIENTO de Tipo Lanzador de Conjuros, y después selecciona 1 monstruo que controle tu adversario; destiérralo.
+    Sacrifica 1 monstruo Lanzador de Conjuros de VIENTO, y después selecciona 1 monstruo que controle tu adversario; destiérralo.
   fr: |-
-    Sacrifiez 1 monstre VENT de Type Magicien, puis ciblez 1 monstre contrôlé par votre adversaire ; bannissez-le.
+    Sacrifiez 1 monstre VENT Magicien, puis ciblez 1 monstre contrôlé par votre adversaire ; bannissez-le.
   it: |-
-    Offri come Tributo 1 mostro VENTO di Tipo Incantatore, poi scegli come bersaglio 1 mostro controllato dal tuo avversario; bandiscilo.
+    Offri come Tributo 1 mostro VENTO Incantatore, poi scegli come bersaglio 1 mostro controllato dal tuo avversario; bandiscilo.
   pt: |-
-    Ofereça como Tributo 1 monstro de VENTO do Tipo Mago e, depois, escolha 1 monstro que seu oponente controla; bana-o.
+    Ofereça como Tributo 1 monstro Mago de VENTO e, depois, escolha 1 monstro que seu oponente controla; bana-o.
   ja: |-
     ①：自分フィールドの魔法使い族・風属性モンスター１体をリリースし、相手フィールドのモンスター１体を対象として発動できる。そのモンスターを除外する。
   ko: |-
