--- a/data/cards/44297127.yaml
+++ b/data/cards/44297127.yaml
@@ -46,26 +46,46 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN025
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: BLAR-DE014
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE025
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLAR-FR014
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR025
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLAR-IT014
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT025
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLAR-PT014
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT025
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CP20-JP014
     set_name: Collection Pack 2020
