--- a/data/cards/51119924.yaml
+++ b/data/cards/51119924.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     You can discard this card to the GY, then target 1 Warrior or Spellcaster monster your opponent controls; take control of that target until the End Phase.
   de: |-
-    Du kannst diese Karte auf den Friedhof abwerfen und dann 1 Monster vom Typ Krieger oder Hexer wählen, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über das gewählte Ziel.
+    Du kannst diese Karte auf den Friedhof abwerfen und dann 1 Krieger- oder Hexer-Monster wählen, das dein Gegner kontrolliert; übernimm bis zur End Phase die Kontrolle über jenes gewählte Ziel.
   es: |-
-    Puedes descartar esta carta de tu mano al Cementerio para seleccionar 1 monstruo boca arriba de Tipo Guerrero o Lanzador de Conjuros que controle tu adversario y tomar su control hasta la End Phase de este turno.
+    Puedes descartar esta carta al Cementerio, y después seleccionar 1 monstruo Guerrero o Lanzador de Conjuros que controle tu adversario; toma el control de ese objetivo hasta la End Phase.
   fr: |-
-    Vous pouvez défausser cette carte au Cimetière, puis ciblez 1 monstre de Type Guerrier ou Magicien contrôlé par votre adversaire ; jusqu'à la End Phase, prenez le contrôle de la cible.
+    Vous pouvez défausser cette carte au Cimetière, puis ciblez 1 monstre Guerrier ou Magicien contrôlé par votre adversaire ; jusqu'à la End Phase, prenez le contrôle de la cible.
   it: |-
-    Puoi scartare questa carta al Cimitero per scegliere 1 mostro scoperto di Tipo Guerriero o Incantatore controllato dal tuo avversario e prendere il controllo fino alla End Phase di questo turno.
+    Puoi scartare questa carta al Cimitero, poi scegliere come bersaglio 1 mostro Guerriero o Incantatore controllato dal tuo avversario; prendi il controllo di quel bersaglio fino alla End Phase.
   pt: |-
-    Você pode descartar este card para o Cemitério e, depois, escolher 1 monstro do Tipo Guerreiro ou Mago que seu oponente controla; tome o controle do alvo até a Fase Final.
+    Você pode descartar este card para o Cemitério e, depois, escolha 1 monstro Guerreiro ou Mago que seu oponente controla; tome o controle do alvo até a Fase Final.
   ja: |-
     このカードを手札から墓地へ捨てて発動できる。相手フィールド上の戦士族・魔法使い族モンスター１体を選択して、エンドフェイズ時までコントロールを得る。
   ko: |-
