--- a/rush.yaml
+++ b/rush.yaml
@@ -134693,7 +134693,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send the top card of your Deck to the Graveyard
+    Send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -134705,7 +134705,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Fairy Type monster on your field with 0 original ATK gains 100 ATK and can attack directly. You can only attack directly with 1 monster this turn.
+    This turn, 1 face-up Fairy Type monster on your field with 0 original ATK gains 100 ATK, and can attack directly. You can only attack directly with 1 monster this turn.
   de:
   es:
   fr:
