--- a/data/cards/02106266.yaml
+++ b/data/cards/02106266.yaml
@@ -8,7 +8,7 @@ name:
   it: Gaia al Galoppo
   pt: Gaia Galopante
   ja: <ruby>走<rt>そう</rt></ruby><ruby>破<rt>は</rt></ruby>するガイア
-  ja_romaji: Sōha-suru Gaia
+  ja_romaji: Sōhasuru Gaia
   ko: 주파하는 가이아
   ko_rr: Jupaha-neun Gaia
   zh-TW:
