--- a/data/cards/45425051.yaml
+++ b/data/cards/45425051.yaml
@@ -8,7 +8,7 @@ name:
   it: Truesdale, Re delle Fate
   pt: Rei das Fadas Truesdale
   ja: <ruby>妖<rt>よう</rt></ruby><ruby>精<rt>せい</rt></ruby><ruby>王<rt>おう</rt></ruby>オベロン
-  ja_romaji: Yōsei'ō Oberon
+  ja_romaji: Yōseiō Oberon
   ko: 요정왕 오베론
   ko_rr: Yojeongwang Oberon
   zh-TW:
