--- a/rush.yaml
+++ b/rush.yaml
@@ -134966,3 +134966,61 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1043816
+---
+konami_id:
+name:
+  en: Love Return
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・リターン
+  ja_romaji: Ravu Ritān
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When you conduct a normal draw during the Draw Phase while you have face-up Fairy Type monster on your field with 0 original ATK and DEF.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Return all face-up monsters on the field with the highest original ATK to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveReturn-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP055
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1044315
