--- a/rush.yaml
+++ b/rush.yaml
@@ -119772,6 +119772,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Three Rulers
 images:
 - index: 1
   image: DivineTransformation-RDMRP2-JP-UR.png
