--- a/rush.yaml
+++ b/rush.yaml
@@ -134985,7 +134985,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When you conduct a normal draw during the Draw Phase while you have face-up Fairy Type monster on your field with 0 original ATK and DEF.
+    When you conduct a normal draw during the Draw Phase while you have a face-up Fairy Type monster on your field with 0 original ATK and DEF.
   de:
   es:
   fr:
