--- a/data/cards/12580477.yaml
+++ b/data/cards/12580477.yaml
@@ -39,6 +39,10 @@ property: Normal
 images:
 - index: 1
   image: Raigeki-LOB-EN-SR-UE-25thAnniversaryEdition.png
+  illustration: Raigeki-MADU-EN-VG-artwork.png
+- index: 2
+  image: Raigeki-QCCU-JP-OP.png
+  illustration: Raigeki-OW-2.png
 sets:
   en:
   - set_number: LOB-EN053
@@ -376,6 +380,12 @@ sets:
     set_name: 'Structure Deck: Forest of the Traptrix - The Legend of Duelist Quarter Century Edition'
     rarities:
     - Ultra Rare
+  - set_number: QCCU-JP194
+    set_name: Quarter Century Chronicle side:Unity
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K053
     set_name: Legend of Blue Eyes White Dragon
