--- a/rush.yaml
+++ b/rush.yaml
@@ -59729,6 +59729,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Ultimate Flag
 images:
 - index: 1
   image: UltimateFightingSpirit-RDKP08-JP-SR.png
