--- a/data/rush/18686.yaml
+++ b/data/rush/18686.yaml
@@ -45,6 +45,8 @@ property: Normal
 images:
 - index: 1
   image: PotofArrogance-RDLGP1-JP-UR.png
+- index: 2
+  image: PotofArrogance-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP006
@@ -52,6 +54,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/S23P-JP012
+    set_name: Tournament Battle March 2024 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR006
     set_name: Legend Awakening Pack
