--- a/rush.yaml
+++ b/rush.yaml
@@ -21440,8 +21440,6 @@ images:
 - index: 2
   image: CosmicStringNoodryad-RDBD02-JP-UPR.png
   illustration: CosmicStringNoodryad-DBR-JP-VG-artwork-2.png
-- index: '2.1'
-  image: CosmicStringNoodryad-DBR-EN-VG-artwork-2.png
 sets:
   ja:
   - set_number: RD/MAX1-JP042
@@ -97438,6 +97436,8 @@ property: Normal
 images:
 - index: 1
   image: PotofArrogance-RDLGP1-JP-UR.png
+- index: 2
+  image: PotofArrogance-RDS23P-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP006
@@ -97445,6 +97445,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/S23P-JP012
+    set_name: Tournament Battle March 2024 prize card
+    rarities:
+    - Ultra Parallel Rare
   ko:
   - set_number: RD/LGP1-KR006
     set_name: Legend Awakening Pack
