--- a/data/cards/yugipedia1044500.yaml
+++ b/data/cards/yugipedia1044500.yaml
@@ -32,6 +32,7 @@ atk: 2500
 def: 1200
 series:
 - Archfiend
+- Gold Sarcophagus of Light
 images:
 - index: 1
   image: ArchfiendsArrival-VX04-JP-OP.png
