--- a/data/cards/89258225.yaml
+++ b/data/cards/89258225.yaml
@@ -43,10 +43,10 @@ def: 700
 images:
 - index: 1
   image: WingedMinion-BE2-JP-C.jpg
-  illustration: WingedMinion-TF04-JP-VG.jpg
+  illustration: WingedMinion-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: WingedMinion-DB2-EN-C-UE.png
-  illustration: WingedMinion-TF04-EN-VG.jpg
+  illustration: WingedMinion-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LOD-EN005
