--- a/data/cards/kdb20041.yaml
+++ b/data/cards/kdb20041.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 20041
 password:
 name:
   en: 'Spell Card: "Soul Exchange"'
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：モンスター１体のアドバンス召喚を行う。その際、自分フィールドのモンスターの代わりに相手フィールドのモンスターをリリースする事もできる。この効果でアドバンス召喚したモンスターはこのターン、リリースできない。②：このカードがフィールドから墓地へ送られた場合に発動する。相手はこのカードの①の効果を適用できる。
   ko:
   zh-TW:
   zh-CN:
@@ -38,7 +39,7 @@ sets:
     - Ultra Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
