--- a/data/rush/16371.yaml
+++ b/data/rush/16371.yaml
@@ -68,6 +68,8 @@ images:
 - index: 2
   image: DarkMagicianGirl-RDDD02-JP-ScR.png
   illustration: DarkMagicianGirl-G002-JP-VG-artwork-2.png
+- index: 3
+  image: DarkMagicianGirl-RDORP2-JP-OP.png
 sets:
   ja:
   - set_number: RD/G001-JP002
@@ -78,6 +80,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
     rarities:
     - Secret Rare
+  - set_number: RD/ORP2-JP001
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/EV01-KREX2
     set_name: Event Pack 2021 EX Vol.1
