--- a/data/cards/yugipedia1044500.yaml
+++ b/data/cards/yugipedia1044500.yaml
@@ -14,7 +14,8 @@ name:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    If you control "Gold Sarcophagus of Light", you can Normal Summon this card without Tributing. If this card is Normal or Special Summoned: You can target 1 monster your opponent controls; take control of it (until the End Phase), but if you did not control "Gold Sarcophagus of Light" at activation, that monster cannot attack while you control it. You can only use this effect of "Archfiend's Arrival" once per turn. Other monsters you control gain 500 ATK during your turn only.
   de:
   es:
   fr:
@@ -32,6 +33,7 @@ atk: 2500
 def: 1200
 series:
 - Archfiend
+- Gold Sarcophagus of Light
 images:
 - index: 1
   image: ArchfiendsArrival-VX04-JP-OP.png
