--- a/data/cards/15735108.yaml
+++ b/data/cards/15735108.yaml
@@ -1,5 +1,5 @@
 konami_id: 20041
-password:
+password: 15735108
 name:
   en: 'Spell Card: "Soul Exchange"'
   de:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SpellCardSoulExchange-VJMP-JP-OP.png
+  image: SpellCardSoulExchange-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP251
