--- a/data/cards/52382379.yaml
+++ b/data/cards/52382379.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Se este card estiver na sua mão ou no Cemitério: você pode banir, com a face para baixo, 3 cards do seu Deck Adicional, exceto "Nemleria Sonhadora"; Invoque este card por Invocação-Especial. Você não pode Invocar monstros por Invocação-Especial do Deck Adicional no turno em que ativar este efeito, exceto Monstros Pêndulo. Você pode enviar para o Cemitério 1 outro monstro Besta de Nível 10 da sua mão ou do campo com a face para cima; Baixe 1 Armadilha "Nemleria" diretamente do seu Deck. Você só pode usar cada efeito de "Devorador dos Sonhos de Nemleria - Reveil" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、「夢見るネムレリア」以外のＥＸデッキのカード３枚を裏側で除外して発動できる（この効果を発動するターン、自分はPモンスターしかＥＸデッキから特殊召喚できない）。このカードを特殊召喚する。②：自分の手札・フィールド（表側表示）からこのカード以外の獣族・レベル１０モンスター１体を墓地へ送って発動できる。デッキから「ネムレリア」罠カード１枚を自分フィールドにセットする。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札・墓地に存在する場合、「夢見るネムレリア」以外のＥＸデッキのカード３枚を裏側で除外して発動できる（この効果を発動するターン、自分はＰモンスターしかＥＸデッキから特殊召喚できない）。このカードを特殊召喚する。②：自分の手札・フィールド（表側表示）からこのカード以外の獣族・レベル１０モンスター１体を墓地へ送って発動できる。デッキから「ネムレリア」罠カード１枚を自分フィールドにセットする。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재할 경우, "꿈꾸는 네무렐리아" 이외의 엑스트라 덱의 카드 3장을 뒷면으로 제외하고 발동할 수 있다(이 효과를 발동하는 턴에, 자신은 펜듈럼 몬스터밖에 엑스트라 덱에서 특수 소환할 수 없다). 이 카드를 특수 소환한다. ②: 자신의 패 / 필드(앞면 표시)에서 이 카드 이외의 야수족 / 레벨 10 몬스터 1장을 묘지로 보내고 발동할 수 있다. 덱에서 "네무렐리아" 함정 카드 1장을 자신 필드에 세트한다.
   zh-TW: |-
