--- a/data/cards/10315429.yaml
+++ b/data/cards/10315429.yaml
@@ -43,10 +43,10 @@ def: 1300
 images:
 - index: 1
   image: YaibaRobo-V5-JP-C-Reprint.png
-  illustration: YaibaRobo-TF04-JP-VG.png
+  illustration: YaibaRobo-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: YaibaRobo-SS05-EN-C-1E.png
-  illustration: YaibaRobo-TF04-EN-VG.jpg
+  illustration: YaibaRobo-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: SS05-ENB02
