--- a/data/cards/06552938.yaml
+++ b/data/cards/06552938.yaml
@@ -51,26 +51,46 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN047
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: BLLR-DE014
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE047
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: BLLR-FR014
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR047
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: BLLR-IT014
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT047
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: BLLR-PT014
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT047
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: CP17-JP014
     set_name: Collectors Pack 2017
