--- a/data/cards/13974207.yaml
+++ b/data/cards/13974207.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: BLC1-EN066
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: NECH-DE041
     set_name: The New Challengers
@@ -84,6 +88,10 @@ sets:
     - Ultra Rare
   - set_number: SDCH-DE018
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: BLC1-DE066
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   fr:
@@ -107,6 +115,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: BLC1-FR066
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: NECH-IT041
     set_name: The New Challengers
@@ -128,6 +140,10 @@ sets:
     set_name: 'Structure Deck: Spirit Charmers'
     rarities:
     - Common
+  - set_number: BLC1-IT066
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: NECH-PT041
     set_name: The New Challengers
@@ -147,6 +163,10 @@ sets:
     - Ultra Rare
   - set_number: SDCH-PT018
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: BLC1-PT066
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   ja:
