--- a/data/cards/22624373.yaml
+++ b/data/cards/22624373.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN055
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   - set_number: BPW2-EN022
     set_name: 'War of the Giants: Round 2'
     rarities:
@@ -102,6 +106,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE055
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: LODT-FR019
     set_name: Light of Destruction
@@ -128,6 +136,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR055
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT019
     set_name: Light of Destruction
@@ -154,6 +166,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT055
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: WGRT-PT022
     set_name: War of the Giants Reinforcements
@@ -171,6 +187,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT055
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: LODT-JP019
     set_name: Light of Destruction
@@ -185,7 +205,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL05
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SD29-JP015
@@ -210,7 +230,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL05
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SD29-KR015
