--- a/data/cards/77558536.yaml
+++ b/data/cards/77558536.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
+  - set_number: BLC1-EN060
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: SDLI-DE003
     set_name: Realm of Light Structure Deck
@@ -78,6 +82,10 @@ sets:
     - Ultra Rare
   - set_number: SDRR-DE021
     set_name: 'Structure Deck: Rokket Revolt'
+    rarities:
+    - Common
+  - set_number: BLC1-DE060
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   fr:
@@ -97,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
+  - set_number: BLC1-FR060
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: SDLI-IT003
     set_name: Realm of Light Structure Deck
@@ -112,6 +124,10 @@ sets:
     - Ultra Rare
   - set_number: SDRR-IT021
     set_name: 'Structure Deck: Rokket Revolt'
+    rarities:
+    - Common
+  - set_number: BLC1-IT060
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   pt:
@@ -131,9 +147,13 @@ sets:
     set_name: 'Structure Deck: Rokket Revolt'
     rarities:
     - Common
+  - set_number: BLC1-PT060
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: DS14-JPLS3
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SR02-JP022
@@ -146,7 +166,7 @@ sets:
     - Common
   ko:
   - set_number: DS14-KRLS3
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: SR02-KR022
