--- a/data/cards/78229193.yaml
+++ b/data/cards/78229193.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN052
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: BLLR-DE019
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE052
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: BLLR-FR019
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR052
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: BLLR-IT019
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT052
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: BLLR-PT019
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT052
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: CP17-JP019
     set_name: Collectors Pack 2017
