--- a/data/cards/93332803.yaml
+++ b/data/cards/93332803.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: BLC1-EN033
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CORE-DE087
     set_name: Clash of Rebellions
@@ -98,6 +102,10 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: BLC1-DE033
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CORE-FR087
     set_name: Clash of Rebellions
@@ -124,6 +132,10 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: BLC1-FR033
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CORE-IT087
     set_name: Clash of Rebellions
@@ -150,6 +162,10 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: BLC1-IT033
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CORE-PT087
     set_name: Clash of Rebellions
@@ -176,6 +192,10 @@ sets:
     set_name: 'Structure Deck: Fire Kings'
     rarities:
     - Common
+  - set_number: BLC1-PT033
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP16-JP021
     set_name: Extra Pack 2016
