--- a/data/cards/93657021.yaml
+++ b/data/cards/93657021.yaml
@@ -66,6 +66,10 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLC1-EN054
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: BLLR-DE025
     set_name: "Battles of Legend: Light's Revenge"
@@ -73,6 +77,10 @@ sets:
     - Secret Rare
   - set_number: LEHD-DEA32
     set_name: Legendary Hero Decks
+    rarities:
+    - Common
+  - set_number: BLC1-DE054
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   fr:
@@ -84,6 +92,10 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLC1-FR054
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: BLLR-IT025
     set_name: "Battles of Legend: Light's Revenge"
@@ -93,6 +105,10 @@ sets:
     set_name: Legendary Hero Decks
     rarities:
     - Common
+  - set_number: BLC1-IT054
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: BLLR-PT025
     set_name: "Battles of Legend: Light's Revenge"
@@ -100,6 +116,10 @@ sets:
     - Secret Rare
   - set_number: LEHD-PTA32
     set_name: Legendary Hero Decks
+    rarities:
+    - Common
+  - set_number: BLC1-PT054
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Common
   ja:
