--- a/data/cards/99111753.yaml
+++ b/data/cards/99111753.yaml
@@ -60,9 +60,17 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN043
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DUPO-DE037
     set_name: Duel Power
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-DE043
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   fr:
@@ -70,14 +78,26 @@ sets:
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR043
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DUPO-IT037
     set_name: Duel Power
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT043
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DUPO-PT037
     set_name: Duel Power
+    rarities:
+    - Ultra Rare
+  - set_number: BLC1-PT043
+    set_name: 'Battles of Legend: Chapter 1'
     rarities:
     - Ultra Rare
   ja:
