--- a/data/cards/yugipedia1042435.yaml
+++ b/data/cards/yugipedia1042435.yaml
@@ -15,13 +15,14 @@ name:
   zh-CN:
 text:
   en: |-
-    The activation of your "Millennium Cross" cannot be negated. You can only use each of the following effects of "Golem that Guards the Millennium Treasures" once per turn. If this card is in your hand: You can place this card face-up in your Spell & Trap Zone as a Continuous Spell. If this card is a Continuous Spell: You can pay 2000 LP or reveal 1 "Millennium Cross" in your hand; Special Summon this card, then you can add 1 "Temple of the Stone Slabs" from your Deck to your hand.
+    The activation of your "Millennium Cross" cannot be negated. You can only use each of the following effects of "Golem that Guards the Millennium Treasures" once per turn. If this card is in your hand: You can place it face-up in your Spell & Trap Zone as a Continuous Spell. If this card is a Continuous Spell: You can pay 2000 LP or reveal 1 "Millennium Cross" in your hand; Special Summon this card, then you can add 1 "Shrine of Wedju" from your Deck to your hand.
   de:
   es:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合に発動できる。このカードを永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。②：このカードが永続魔法カード扱いの場合、２０００ＬＰを払うか手札の「千年の十字」１枚を相手に見せて発動できる。このカードを特殊召喚する。その後、デッキから「石版の神殿」１枚を手札に加える事ができる。③：このカードがモンスターゾーンに存在する限り、自分の「千年の十字」の発動は無効化されない。
   ko:
   zh-TW:
   zh-CN:
@@ -33,6 +34,7 @@ atk: 2000
 def: 2200
 series:
 - Sennen
+- Field Searcher
 images:
 - index: 1
   image: GolemthatGuardstheMillenniumTreasures-INFO-JP-OP.png
