--- a/data/cards/00213326.yaml
+++ b/data/cards/00213326.yaml
@@ -65,6 +65,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: BLC1-EN032
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: DR04-EN219
     set_name: Dark Revelation Volume 4
     rarities:
@@ -94,6 +98,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: BLC1-DE032
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: EOJ-FR039
     set_name: Enemy of Justice
@@ -115,6 +123,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: BLC1-FR032
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: EOJ-IT039
     set_name: Enemy of Justice
@@ -140,6 +152,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: BLC1-IT032
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SDHS-PT029
     set_name: HERO Strike Structure Deck
@@ -149,6 +165,10 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: BLC1-PT032
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EOJ-JP039
     set_name: Enemy of Justice
