--- a/data/cards/00691925.yaml
+++ b/data/cards/00691925.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN062
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: LODT-DE052
     set_name: Light of Destruction
@@ -86,6 +90,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE062
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: LODT-FR052
     set_name: Light of Destruction
@@ -108,6 +116,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR062
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT052
     set_name: Light of Destruction
@@ -130,6 +142,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT062
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: PGLD-PT046
     set_name: Premium Gold
@@ -143,6 +159,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT062
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: LODT-JP052
     set_name: Light of Destruction
@@ -153,7 +173,7 @@ sets:
     rarities:
     - Super Rare
   - set_number: DS14-JPL22
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: 17TP-JP212
@@ -166,7 +186,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL24
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: AE11-KR022
