--- a/data/cards/15661378.yaml
+++ b/data/cards/15661378.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN045
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: JUMP-EN088
     set_name: Weekly Shonen Jump June 2019 membership promotional cards
     rarities:
@@ -73,21 +77,37 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE045
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLAR-FR048
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR045
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLAR-IT048
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT045
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLAR-PT048
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT045
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VP18-JP001
     set_name: 20th Anniversary Legendary Dragons
