--- a/data/cards/28674152.yaml
+++ b/data/cards/28674152.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: BLC1-EN035
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: DOCS-DE087
     set_name: Dimension of Chaos
@@ -80,6 +84,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: BLC1-DE035
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: DOCS-FR087
     set_name: Dimension of Chaos
@@ -97,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: BLC1-FR035
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DOCS-IT087
     set_name: Dimension of Chaos
@@ -114,6 +126,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: BLC1-IT035
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: DOCS-PT087
     set_name: Dimension of Chaos
@@ -131,6 +147,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: BLC1-PT035
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP16-JP023
     set_name: Extra Pack 2016
