--- a/data/cards/29726552.yaml
+++ b/data/cards/29726552.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: BLC1-EN034
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: CORE-DE088
     set_name: Clash of Rebellions
@@ -80,6 +84,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: BLC1-DE034
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: CORE-FR088
     set_name: Clash of Rebellions
@@ -97,6 +105,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: BLC1-FR034
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: CORE-IT088
     set_name: Clash of Rebellions
@@ -114,6 +126,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: BLC1-IT034
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: CORE-PT088
     set_name: Clash of Rebellions
@@ -131,6 +147,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: BLC1-PT034
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: EP16-JP022
     set_name: Extra Pack 2016
