--- a/data/cards/39392286.yaml
+++ b/data/cards/39392286.yaml
@@ -59,6 +59,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN041
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: LED4-DE001
     set_name: 'Legendary Duelists: Sisters of the Rose'
@@ -68,6 +72,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE041
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: LED4-FR001
     set_name: 'Legendary Duelists: Sisters of the Rose'
@@ -77,6 +85,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR041
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: LED4-IT001
     set_name: 'Legendary Duelists: Sisters of the Rose'
@@ -86,6 +98,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT041
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: LED4-PT001
     set_name: 'Legendary Duelists: Sisters of the Rose'
@@ -95,6 +111,10 @@ sets:
     set_name: 'Legendary Duelists: Season 2'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT041
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: DP21-JP001
     set_name: 'Duelist Pack: Legend Duelist 4'
