--- a/data/cards/41659072.yaml
+++ b/data/cards/41659072.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN046
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: JUMP-EN089
     set_name: Weekly Shonen Jump June 2019 membership promotional cards
     rarities:
@@ -70,21 +74,37 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE046
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLAR-FR049
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR046
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLAR-IT049
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT046
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLAR-PT049
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT046
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VP18-JP002
     set_name: 20th Anniversary Legendary Dragons
