--- a/data/cards/54366836.yaml
+++ b/data/cards/54366836.yaml
@@ -64,26 +64,46 @@ sets:
     set_name: Number Hunters
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN037
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: NUMH-DE026
     set_name: Number Hunters
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE037
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: NUMH-FR026
     set_name: Number Hunters
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR037
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: NUMH-IT026
     set_name: Number Hunters
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT037
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: NUMH-PT026
     set_name: Number Hunters
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT037
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CPZ1-JP018
     set_name: 'Collectors Pack: ZEXAL Version'
