--- a/data/cards/55204071.yaml
+++ b/data/cards/55204071.yaml
@@ -52,26 +52,46 @@ sets:
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: BLC1-EN040
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: NUMH-DE009
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: BLC1-DE040
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: NUMH-FR009
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: BLC1-FR040
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: NUMH-IT009
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: BLC1-IT040
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: NUMH-PT009
     set_name: Number Hunters
     rarities:
     - Super Rare
+  - set_number: BLC1-PT040
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: CPZ1-JP009
     set_name: 'Collectors Pack: ZEXAL Version'
