--- a/data/cards/59019082.yaml
+++ b/data/cards/59019082.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN056
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: LODT-DE020
     set_name: Light of Destruction
@@ -97,6 +101,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE056
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: LODT-FR020
     set_name: Light of Destruction
@@ -118,6 +126,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR056
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT020
     set_name: Light of Destruction
@@ -143,6 +155,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT056
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: SDLI-PT009
     set_name: Realm of Light Structure Deck
@@ -152,6 +168,10 @@ sets:
     set_name: "Battles of Legend: Light's Revenge"
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT056
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: LODT-JP020
     set_name: Light of Destruction
@@ -162,7 +182,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-JPL06
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   ko:
@@ -171,7 +191,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL06
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
 limit_regulation:
