--- a/data/cards/62541668.yaml
+++ b/data/cards/62541668.yaml
@@ -59,26 +59,46 @@ sets:
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: BLC1-EN038
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PGL3-DE011
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: BLC1-DE038
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PGL3-FR011
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: BLC1-FR038
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PGL3-IT011
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: BLC1-IT038
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: PGL3-PT011
     set_name: 'Premium Gold: Infinite Gold'
     rarities:
     - Gold Secret Rare
+  - set_number: BLC1-PT038
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PP18-JP011
     set_name: Premium Pack 18
