--- a/data/cards/79266769.yaml
+++ b/data/cards/79266769.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-EN044
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   - set_number: JUMP-EN087
     set_name: Weekly Shonen Jump June 2019 membership promotional cards
     rarities:
@@ -72,21 +76,37 @@ sets:
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-DE044
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: BLAR-FR047
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-FR044
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   it:
   - set_number: BLAR-IT047
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-IT044
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: BLAR-PT047
     set_name: 'Battles of Legend: Armageddon'
     rarities:
     - Secret Rare
+  - set_number: BLC1-PT044
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: VJMP-JP148
     set_name: V Jump July 2018 promotional card
