--- a/data/cards/79441381.yaml
+++ b/data/cards/79441381.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: BLC1-EN049
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: BLLR-DE016
     set_name: "Battles of Legend: Light's Revenge"
@@ -86,6 +90,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: BLC1-DE049
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: BLLR-FR016
     set_name: "Battles of Legend: Light's Revenge"
@@ -95,6 +103,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: BLC1-FR049
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: BLLR-IT016
     set_name: "Battles of Legend: Light's Revenge"
@@ -104,6 +116,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: BLC1-IT049
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: BLLR-PT016
     set_name: "Battles of Legend: Light's Revenge"
@@ -113,6 +129,10 @@ sets:
     set_name: Shadows in Valhalla
     rarities:
     - Super Rare
+  - set_number: BLC1-PT049
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: CP17-JP016
     set_name: Collectors Pack 2017
