--- a/data/cards/84013237.yaml
+++ b/data/cards/84013237.yaml
@@ -126,9 +126,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-EN???
+  - set_number: BLC1-EN039
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   - set_number: DT07-EN034
     set_name: Duel Terminal 7a
     rarities:
@@ -193,9 +194,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-DE???
+  - set_number: BLC1-DE039
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   fr:
   - set_number: YS11-FR041
     set_name: 'Starter Deck: Dawn of the Xyz'
@@ -252,9 +254,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-FR???
+  - set_number: BLC1-FR039
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   it:
   - set_number: YS11-IT041
     set_name: 'Starter Deck: Dawn of the Xyz'
@@ -311,9 +314,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-IT???
+  - set_number: BLC1-IT039
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   pt:
   - set_number: SP13-PT021
     set_name: Star Pack 2013
@@ -349,9 +353,10 @@ sets:
     set_name: '25th Anniversary Tin: Dueling Heroes'
     rarities:
     - Quarter Century Secret Rare
-  - set_number: ????-PT???
+  - set_number: BLC1-PT039
     set_name: 'Battles of Legend: Chapter 1'
     rarities:
+    - Ultra Rare
   ja:
   - set_number: YSD6-JP041
     set_name: Starter Deck 2011
