--- a/data/cards/95503687.yaml
+++ b/data/cards/95503687.yaml
@@ -79,6 +79,10 @@ sets:
     set_name: The Lost Art Promotion 2022 C
     rarities:
     - Ultra Rare
+  - set_number: BLC1-EN057
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   de:
   - set_number: LODT-DE021
     set_name: Light of Destruction
@@ -108,6 +112,10 @@ sets:
     set_name: The Lost Art Promotion 2022 C
     rarities:
     - Ultra Rare
+  - set_number: BLC1-DE057
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   fr:
   - set_number: LODT-FR021
     set_name: Light of Destruction
@@ -133,6 +141,10 @@ sets:
     set_name: The Lost Art Promotion 2022 C
     rarities:
     - Ultra Rare
+  - set_number: BLC1-FR057
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   it:
   - set_number: LODT-IT021
     set_name: Light of Destruction
@@ -162,6 +174,10 @@ sets:
     set_name: The Lost Art Promotion 2022 C
     rarities:
     - Ultra Rare
+  - set_number: BLC1-IT057
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   pt:
   - set_number: SDLI-PT012
     set_name: Realm of Light Structure Deck
@@ -175,6 +191,10 @@ sets:
     set_name: The Lost Art Promotion 2022 C
     rarities:
     - Ultra Rare
+  - set_number: BLC1-PT057
+    set_name: 'Battles of Legend: Chapter 1'
+    rarities:
+    - Common
   ja:
   - set_number: LODT-JP021
     set_name: Light of Destruction
@@ -185,7 +205,7 @@ sets:
     rarities:
     - Rare
   - set_number: DS14-JPL09
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: 17TP-JP203
@@ -202,7 +222,7 @@ sets:
     rarities:
     - Common
   - set_number: DS14-KRL09
-    set_name: 'Duelist Set: Version Lightlord Judgment'
+    set_name: 'Duelist Set: Version Lightsworn Judgment'
     rarities:
     - Ultra Rare
   - set_number: AE11-KR010
