--- a/data/rush/19541.yaml
+++ b/data/rush/19541.yaml
@@ -44,6 +44,8 @@ attribute: EARTH
 level: 1
 atk: 0
 def: 1400
+series:
+- Straynge Cat
 images:
 - index: 1
   image: StrayngeCatMagician-RDSJMP-JP-NPR.png
