--- a/data/rush/19556.yaml
+++ b/data/rush/19556.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Straynge Cat
 images:
 - index: 1
   image: StrayngeCatJealousy-RDMRP2-JP-C.png
