--- a/data/cards/34446231.yaml
+++ b/data/cards/34446231.yaml
@@ -46,6 +46,26 @@ images:
 - index: 1
   image: InfernoidFlood-TW01-JP-C.png
 sets:
+  en:
+  - set_number: BLTR-EN???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  de:
+  - set_number: BLTR-DE???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  fr:
+  - set_number: BLTR-FR???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  it:
+  - set_number: BLTR-IT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  pt:
+  - set_number: BLTR-PT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
   ja:
   - set_number: TW01-JP098
     set_name: Terminal World (set)
