--- a/data/cards/65892310.yaml
+++ b/data/cards/65892310.yaml
@@ -39,6 +39,26 @@ images:
 - index: 1
   image: BrionactheDragonofIcyMalevolence-VJMP-JP-UR.png
 sets:
+  en:
+  - set_number: BLTR-EN???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  de:
+  - set_number: BLTR-DE???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  fr:
+  - set_number: BLTR-FR???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  it:
+  - set_number: BLTR-IT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  pt:
+  - set_number: BLTR-PT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
   ja:
   - set_number: VJMP-JP241
     set_name: V Jump September 2023 promotional card
