--- a/data/cards/08173184.yaml
+++ b/data/cards/08173184.yaml
@@ -43,6 +43,26 @@ images:
 - index: 1
   image: RepairedGenexController-TW01-JP-C.png
 sets:
+  en:
+  - set_number: BLTR-EN???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  de:
+  - set_number: BLTR-DE???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  fr:
+  - set_number: BLTR-FR???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  it:
+  - set_number: BLTR-IT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
+  pt:
+  - set_number: BLTR-PT???
+    set_name: 'Battles of Legend: Terminal Revenge'
+    rarities:
   ja:
   - set_number: TW01-JP051
     set_name: Terminal World (set)
