--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -46,3 +46,6 @@
 # The Legend of Duelist Promotion Pack
 - set_abbreviation: TDPR
   fake_password_range: 100435000
+# The Valuable Book EX 4 promotional cards
+- set_abbreviation: VX04
+  fake_password_range: 100436000
