--- a/data/rush/20053.yaml
+++ b/data/rush/20053.yaml
@@ -40,6 +40,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Field
+series:
+- Psychic Musician
 images:
 - index: 1
   image: DreamLive-RDTDPR-JP-OP.png
