--- a/data/rush/17007.yaml
+++ b/data/rush/17007.yaml
@@ -48,7 +48,7 @@ atk: 2800
 def: 2100
 materials:
   en: |-
-    "Sigilstate Sol" + "Connector Dog"
+    "Sigurstate Sol" + "Connector Dog"
   de:
   es:
   fr:
