--- a/data/rush/16791.yaml
+++ b/data/rush/16791.yaml
@@ -1,6 +1,6 @@
 konami_id: 16791
 name:
-  en: Sigilstate Sol
+  en: Sigurstate Sol
   de:
   es:
   fr:
@@ -48,7 +48,7 @@ atk: 2500
 def: 0
 images:
 - index: 1
-  image: SigilstateSol-RDSBD6-JP-C.png
+  image: SigurstateSol-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD6-JP004
@@ -61,8 +61,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716701
