--- a/data/cards/67959180.yaml
+++ b/data/cards/67959180.yaml
@@ -42,7 +42,7 @@ atk: 950
 def: 700
 images:
 - index: 1
-  image: GoddessofWhim-15AX-JP-C.png
+  image: GoddessofWhim-TDPP-JP-UR.png
   illustration: GoddessofWhim-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: GoddessofWhim-LCYW-EN-C-1E.png
