--- a/data/cards/23171610.yaml
+++ b/data/cards/23171610.yaml
@@ -39,8 +39,10 @@ property: Quick-Play
 images:
 - index: 1
   image: LimiterRemoval-PSV-EN-SR-UE-25thAnniversaryEdition.png
+  illustration: LimiterRemoval-MADU-EN-VG-artwork.png
 - index: 2
   image: LimiterRemoval-QCCP-JP-OP.png
+  illustration: LimiterRemoval-OW-2.png
 sets:
   en:
   - set_number: DB1-EN179
